<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"




    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_black_submit"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/_10sdp"
        android:src="@drawable/ic_menu"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        />

    <FrameLayout
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_above="@+id/bottomnavigation" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="@dimen/_26sdp"

        >
        <include layout="@layout/bottom_menu_item" android:id="@+id/bottom_menu"/>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/on_trip"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_room_availability"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:textOff="@string/online"
            android:textOn="@string/offline"
            android:thumb="@drawable/thumb_selector"
            app:switchMinWidth="100dp"
            app:track="@drawable/track_selector" />

        <TextView
            android:id="@+id/tv_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_30sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/online"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/offline"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible" />

    </RelativeLayout>


</RelativeLayout>