<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.OTP_Activity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/splash_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_page" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_black_submit"
        android:text="@string/enter_otp"
        android:textAllCaps="false"
        android:src="@drawable/ic_back"
        android:elevation="@dimen/_10sdp"
        android:backgroundTint="@color/app_color"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_app_icon"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_icon" />

            <TextView
                android:id="@+id/tv_lower_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/provider_your_verification_code"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_app_icon" />

            <TextView
                android:id="@+id/tv_lower_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:gravity="center"
                tools:text="@string/please_type_verification_code_send_to_the"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lower_title" />

            <TextView
                android:id="@+id/tv_phone_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:drawableStart="@drawable/ic_otp"
                android:drawablePadding="@dimen/_7sdp"
                android:gravity="left|center_vertical"
                android:text="@string/enter_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lower_sub" />

            <com.chaos.view.PinView
                android:id="@+id/otp_view"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:cursorVisible="true"
                android:inputType="numberDecimal"
                android:itemBackground="@color/white"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:cursorColor="@color/black"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemHeight="@dimen/_40sdp"
                app:itemRadius="@dimen/_5sdp"
                app:itemSpacing="@dimen/_5sdp"
                app:itemWidth="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="@+id/tv_phone_title"
                app:layout_constraintStart_toStartOf="@+id/tv_phone_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_title"
                app:lineColor="@color/app_color"
                app:lineWidth="@dimen/_1sdp"
                app:viewType="rectangle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/btn_black_submit"
                android:onClick="@{()-> viewModel.onClickNextPage()}"
                android:text="@string/enter_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_phone_title"
                app:layout_constraintTop_toBottomOf="@+id/otp_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resubmit_otp"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@null"
                android:text="@string/resend_otp"
                android:textAllCaps="false"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
                app:layout_constraintEnd_toEndOf="@+id/tv_phone_title"
                app:layout_constraintTop_toTopOf="@+id/btn_submit" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>